# boxlogistics

./: CMakeLists.txt  Readme.MD  app.c  main.c
app/: bd.c  config.h  cursor.c  demo.c  login.c  menus.c  operacoes.c
doc/: boas_praticas.MD
generics/: arvore.c  fila.c  lista_dupla.c  pilha.c
include/: arvore.h  bd.h  cadastros.h  calendario.h  carga.h  contrato.h  data.h  entrega.h  fila.h  historico.h  lista_dupla.h  login.h  pilha.h  produto.h  visual.h
lib/: calendario.c  data.c  menu.c  visual.c
lite/: arvore_cargas.c  filaentregas.c  listaduplacaminhoes.c  listaduplaclientes.c  listaduplaprodutos.c  main_lite.c  outros.c
models/: produto.c
modules/: ajuda.c  cadastros.c  cargas.c  clientes.c  entregas.c  produtos.c  vendas.c
src/: main.c
